--- a/style.css
+++ b/style.css
@@ -285,3 +285,86 @@ span {
   z-index: 2;
   box-shadow: var(--box-shadow);
 }
+
+.contact {
+  width: 100%;
+  border-top: var(--border);
+  margin-top: 10rem;
+  background-color: #2c2c2c;
+}
+
+.contact__content {
+  display: flex;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.contact__left {
+  flex: 1;
+  display: flex;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  justify-content: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.contact__logo {
+  width: 10rem;
+  height: auto;
+  margin-bottom: 5rem;
+  margin-left: 1.5rem;
+}
+
+.contact__personal--item {
+  display: flex;
+  align-items: center;
+  color: #fff;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+}
+
+.contact__personal--icon {
+  width: 2rem;
+  height: 2rem;
+  padding: 1rem;
+  margin: 0.5rem;
+  font-size: 2rem;
+  color: var(--color-primary);
+  border-radius: var(--border-radius);
+  cursor: pointer;
+}
+
+.contact__social--icon {
+  width: 2rem;
+  height: 2rem;
+  padding: 1rem;
+  margin: 0.5rem;
+  margin-top: 5rem;
+  font-size: 2rem;
+  color: #ec8b06;
+  border-radius: 0.5rem;
+  background-color: #1b1b1b;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  cursor: pointer;
+}
+
+.contact__social--icon:hover {
+  color: #fff;
+}
+
+.contact__social--icon:active {
+  box-shadow: none;
+}
+
+.contact__right {
+  flex: 1;
+}
+
+.contact__map {
+  border: 1rem solid #ec8b06;
+  width: 60rem;
+  height: 40rem;
+  border-radius: 0.5rem;
+}
