--- a/style.css
+++ b/style.css
@@ -335,6 +335,8 @@ a:active {
 .home__text--up {
   font-size: 9rem;
   text-transform: uppercase;
+  line-height: 1;
+  margin-bottom: 1.5rem;
 }
 
 @media only screen and (max-width: 1200px) {
