--- a/style.css
+++ b/style.css
@@ -7,16 +7,17 @@
   box-sizing: inherit;
 }
 
+*::selection {
+  color: #fff;
+  background-color: var(--color-primary);
+}
+
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
   font-family: "Open Sans", sans-serif;
 }
 
-*::selection {
-  color: #fff;
-  background-color: var(--color-primary);
-}
 /********** SCROLLBAR **********/
 body::-webkit-scrollbar {
   width: 1em;
@@ -66,6 +67,10 @@ a:active {
   margin: auto;
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.underline {
+  border-bottom: 1px solid var(--color-primary);
 }
 
 .heading {
@@ -121,22 +126,22 @@ a:active {
     background-image: url(img/img-3.jpg);
   }
   51% {
-    background-image: url(img/img-5.jpg);
+    background-image: url(img/img-4.jpg);
   }
   65% {
-    background-image: url(img/img-5.jpg);
+    background-image: url(img/img-4.jpg);
   }
   68% {
-    background-image: url(img/img-8.jpg);
+    background-image: url(img/img-5.jpg);
   }
   82% {
-    background-image: url(img/img-8.jpg);
+    background-image: url(img/img-5.jpg);
   }
   85% {
-    background-image: url(img/img-18.jpg);
+    background-image: url(img/img-9.jpg);
   }
   97% {
-    background-image: url(img/img-18.jpg);
+    background-image: url(img/img-9.jpg);
   }
 }
 
@@ -490,7 +495,7 @@ a:active {
   grid-gap: 1rem;
   grid-template-rows: auto;
   grid-template-columns: 1fr 1fr 1fr;
-  margin-top: 10rem;
+  margin-top: 5rem;
   background-color: var(--color-primary);
   border: var(--border);
   border-radius: var(--border-radius);
@@ -570,10 +575,6 @@ a:active {
 @media only screen and (max-width: 650px) {
   .contact__left {
     margin-top: 0;
-  }
-}
-@media only screen and (max-width: 450px) {
-  .contact__left {
     align-self: flex-start;
   }
 }
@@ -597,6 +598,14 @@ a:active {
   color: #fff;
   font-size: 1.5rem;
   line-height: 2.5rem;
+}
+
+.contact__personal--item address {
+  font-style: normal;
+}
+
+.contact__personal--item a {
+  color: #fff;
 }
 
 .contact__personal--icon {
