--- a/style.css
+++ b/style.css
@@ -495,7 +495,7 @@ a:active {
   grid-gap: 1rem;
   grid-template-rows: auto;
   grid-template-columns: 1fr 1fr 1fr;
-  margin-top: 5rem;
+  margin-top: 7rem;
   background-color: var(--color-primary);
   border: var(--border);
   border-radius: var(--border-radius);
@@ -521,6 +521,10 @@ a:active {
 @media only screen and (max-width: 900px) {
   .gallery__img {
     height: 20rem;
+  }
+
+  .gallery__img:last-child {
+    display: none;
   }
 }
 
