--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ a:active {
   position: relative;
   height: 100vh;
   width: 100%;
-  background-image: url(img/img-1.webp);
+  background-image: url(img/img-1.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -93,40 +93,40 @@ a:active {
 }
 @keyframes slider {
   0% {
-    background-image: url(img/img-1.webp);
+    background-image: url(img/img-1.png);
   }
   13% {
-    background-image: url(img/img-1.webp);
+    background-image: url(img/img-1.png);
   }
   17% {
-    background-image: url(img/img-2.webp);
+    background-image: url(img/img-2.png);
   }
   31% {
-    background-image: url(img/img-2.webp);
+    background-image: url(img/img-2.png);
   }
   34% {
-    background-image: url(img/img-3.webp);
+    background-image: url(img/img-3.png);
   }
   48% {
-    background-image: url(img/img-3.webp);
+    background-image: url(img/img-3.png);
   }
   51% {
-    background-image: url(img/img-4.webp);
+    background-image: url(img/img-4.png);
   }
   65% {
-    background-image: url(img/img-4.webp);
+    background-image: url(img/img-4.png);
   }
   68% {
-    background-image: url(img/img-5.webp);
+    background-image: url(img/img-5.png);
   }
   82% {
-    background-image: url(img/img-5.webp);
+    background-image: url(img/img-5.png);
   }
   85% {
-    background-image: url(img/img-9.webp);
+    background-image: url(img/img-9.png);
   }
   97% {
-    background-image: url(img/img-9.webp);
+    background-image: url(img/img-9.png);
   }
 }
 .home__gradient {
